Static Site Setup

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,3 +5,8 @@
     background-color: #191c24;
 }
 
+.font-hg {
+  font-family: "Hanken Grotesk", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
